# extract_fantasy_data

./: .gitignore  SCHEMA.md  TRANSFORM.md  main.py  pyproject.toml
extract_fantasy_data/: config.py  db.py  extract.py  load.py  logging_setup.py  transform.py
